# barrikada

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  compose.jentic-extension.yml  docker-compose.yml  docker_entrypoint.sh  generate_testbed.py  orchestrator.py  pyproject.toml  requirements.runtime.txt  requirements.txt
api/: __init__.py  server.py
barrikada/: __init__.py
barrikade/: __init__.py  __main__.py  sdk.py
barrikade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/: __init__.py  adapter.py  agent.py  artifacts.py  cli.py  incident_reporter.py  intent_scorer.py  jentic_middleware.py  model_registry.py  orchestrator.py  risk_budget.py  session.py  session_orchestrator.py  settings.py
datasets/: barrikada.csv  barrikada_test.csv  malignant_condensed.csv  malignant_processed.csv
demo/: __init__.py  demo_utils.py  streamlit_app.py
docs/: ARTIFACTS.md  DEVELOPMENT.md  DOCKER.md  MODEL_HOSTING.md  README.md  STATEFUL_SECURITY.md
examples/: README.md  basic_detection.py  quickstart.py
models/: DetectionResult.py  LayerAResult.py  LayerBResult.py  LayerCResult.py  LayerDResult.py  LayerResult.py  PatternStats.py  PipelineResult.py  SignatureMatch.py  __init__.py  verdicts.py
notebooks/: dataset_compilation.ipynb  dual_llm_evaluation.ipynb  layers_tests.ipynb
scripts/: agent.py  analysis.ipynb  build_artifact_manifest.py  bundle_models.py  cleanup_archives.py  download_qwen3guard.py  export_layer_b_onnx.py  export_layer_c_encoder_onnx.py  export_layer_c_onnx.py  (+15 more)
(+122 files in other folders)
