[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barrikada"
version = "0.1.0"
description = "Tiered prompt-injection defense pipeline for agentic LLM systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Barrikada"}
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=7.0"
]
train = [
  "jupyter>=1.0",
  "notebook>=7.0"
]

[project.scripts]
barrikada = "core.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*", "config*", "barrikada*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
core = [
  "layer_b/signatures/embeddings/metadata.json",
  "layer_b/signatures/embeddings/cluster_radii.json",
  "layer_c/outputs/tf_idf_logreg.metadata.json",
  "layer_d/outputs/releases/**/*"
]
